# webassembly-tests-rust

./: .gitignore  Cargo.toml  LICENSE_MIT  README.md
benches/: benchmarks.rs
src/: data.rs  lib.rs  testdata.rs
src/benchmarks/: aes.rs  base64.rs  convolve.rs  convolve_mem.rs  convolve_video.rs  deflate.rs  dom.rs  exif.rs  fibonacci.rs  hanoi.rs  iterate.rs  mod.rs  sha.rs  sha256.rs  strings.rs  sum.rs
src/tests/: aes.rs  deflate.rs  hanoi.rs  mod.rs  prime.rs  sort.rs
tests/: lib.rs  tests.rs
